# Fake-News-Detection-Turkish

./: .gitignore  README.md  main.py  pyproject.toml
src/: app.py  best_model.h5  haber_tespit_model.h5
src/app/: LSTM.py  fake.py  preprocessing.py  real.py  tr.py
src/model/: __init__.py  prediction_model.py  preprocess.py
src/static/styles/: style.css
src/templates/: index.html
